[gd_scene load_steps=3 format=3 uid="uid://bppgdjufjgfub"]

[ext_resource type="Script" uid="uid://byaf1y21eibk5" path="res://Analiticas/Login.gd" id="1_2milh"]

[sub_resource type="LabelSettings" id="LabelSettings_2milh"]
font_size = 70

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2milh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="VBoxContainer"]

[node name="Label" type="Label" parent="VBoxContainer/CanvasLayer"]
custom_minimum_size = Vector2(0, 200)
offset_top = -111.0
offset_right = 1920.0
offset_bottom = 489.0
scale = Vector2(1, 0.9599999)
text = "Introduce tu ID"
label_settings = SubResource("LabelSettings_2milh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputID" type="LineEdit" parent="VBoxContainer/CanvasLayer"]
custom_minimum_size = Vector2(0, 100)
offset_top = 401.0
offset_right = 1920.0
offset_bottom = 501.0
placeholder_text = "ID"
alignment = 1

[node name="BtnEnter" type="Button" parent="VBoxContainer/CanvasLayer"]
custom_minimum_size = Vector2(0, 200)
offset_left = -1.0
offset_top = 624.0
offset_right = 1919.0
offset_bottom = 824.0
text = "ENTRAR"

[node name="ErrorLabel" type="Label" parent="VBoxContainer/CanvasLayer"]
custom_minimum_size = Vector2(0, 150)
offset_top = 927.0
offset_right = 1920.0
offset_bottom = 1077.0
